* Cool, there's an online review on Linux Uprising, you can read it here:
  https://www.linuxuprising.com/2020/03/ffmpegfs-is-fuse-based-filesystem-for.html

Important changes in 2.8 (2021-11-XX):

* Bugfix: Issue #102: Not all SQL queries where case sensitive, causing cache
  confusion. Several database entries were created, but only one was updated.
  Made all queries case sensitive.
Important changes in 2.7 (2021-11-08):

* Bugfix: Issue #92: Fixed crash when hardware decoding failed. The problem
  is that the FFmpeg API very late reports that it cannot decode the file in
  hardware. To find out about that, the source file must be decoded until the
  first video frame is encountered.
  It would be very time consuming to do this on every file (decode until it
  is clear that the file is supported, then actually start transcoding it
  from scratch). There is no feasible way to automatically handle the
  situation. To get around this a --hwaccel_dec_blocked parameter has been
  added.
  If hardware decoding fails, check the log for a message similar this:
  "[vp9 @ 0x7fe910016080] No support for codec vp9 profile 0."
  If VP9 profile 0 is not supported, the parameter would be:
  --hwaccel_dec_blocked=VP9:0
  This will tell FFmpegfs to decode the file in software. To block VP9
  as a whole, the parameter would be --hwaccel_dec_blocked=VP9. To block
  both profile 0 and 1, use --hwaccel_dec_blocked=VP9:0:1.
  The parameter can be repeated to block even more codecs.
* Bugfix: Issue #96: Fixed potential buffer overrun and crash when reading
  corrupted input files.
* Enhancement: Issue #99: Report command line error if --desttype specifies
  audio format first, or if the second format is not audio only. Avoid
  misinterpretations. For example, --desttype=aiff+mov would create MOV
  files out of any input. Correct would be --desttype=mov+aiff which will
  create MOV files out of videos and AIFF from audio files, as expected.
  
Important changes in 2.6 (2021-09-04):
