@@ -10,6 +10,8 @@ Important changes in 2.8 (2021-11-XX):
 * Bugfix: Issue #102: Not all SQL queries where case sensitive, causing cache
   confusion. Several database entries were created, but only one was updated.
   Made all queries case sensitive.
+  Make sure that the cache is clean when transcoding starts. There should be
+  no remains left, all segments must be created or recreated anyway.
 Important changes in 2.7 (2021-11-08):
 
 * Bugfix: Issue #92: Fixed crash when hardware decoding failed. The problem
